--- a/src/artist.html
+++ b/src/artist.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>layout-designer-project-lvl2 MrsDante</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
 
