--- a/src/index.html
+++ b/src/index.html
@@ -4,14 +4,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>layout-designer-project-lvl2 MrsDante</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/app.css">
   </head>
   <body>
    
-    <header class="main-header">
+    <header class="main-header" id="page-description">
        <nav class="header-navigation">
 
         <div class="header-nav-left">
+         <img src="../src/images/logo.svg">
          <a class="header-navigation-item" href="#">Music Box</a>
         </div>
         <div class="header-nav-middle">
