--- a/src/index.html
+++ b/src/index.html
@@ -95,11 +95,11 @@
 
    <div class="news-item">
      <div class="news-left">
-       <img src="images/Music to Be Murdered By.png" alt="бородатый чел">
+       <img src="images/Music to Be Murdered By.png" alt="бородатый чел" class="news_image">
      </div>
      <div class="news-right">
      <h3 class="news-item-header">Music to Be Murdered By</h3>
-     <p>Новый альбом Eminem «Music to Be Murdered By» уже доступен в нашем сервисе. На альбоме вас ждёт 20 новых треков.</p>
+     <p class="news-about">Новый альбом Eminem «Music to Be Murdered By» уже доступен в нашем сервисе. На альбоме вас ждёт 20 новых треков.</p>
      <div class="news-links">
        <img class="news-icon" alt="music" src="images/avatar.png">
        <a class="news-link" href="#">Music box</a>
@@ -127,7 +127,7 @@
   <div class="news-item news-item-bottom">
     <div class="news-right">
       <h3 class="news-item-header">Ordinary Man</h3>
-      <p>Легенда рока Оззи Озборн спустя 10 лет выпустил новый альбом Ordinary Man. Слушайте в числе первых на Music Box</p>
+      <p class="news-about">Легенда рока Оззи Озборн спустя 10 лет выпустил новый альбом Ordinary Man. Слушайте в числе первых на Music Box</p>
       <div class="news-links">
         <img class="news-icon" alt="music" src="images/avatar.png">
         <a class="news-link" href="#">MUSIC BOX</a>
@@ -136,7 +136,7 @@
       <button class="btn news-btn">К АЛЬБОМУ</button>
     </div>
     <div class="news-left">
-      <img src="images/Ordinary Man.png" alt="женщина с микрофоном">
+      <img src="images/Ordinary Man.png" alt="женщина с микрофоном" class="news_image">
     </div>
   </div>
 
