--- a/src/index.html
+++ b/src/index.html
@@ -149,7 +149,7 @@
       <h2 class="mobile-app-title white-color">Мобильное приложение</h2>
       <div class="mobile-app-description">
         <div class="mob-app-left">
-          <p>Воспользуйтесь нашим мобильным приложением. Оно позволит слушать музыку с любого устройства на базе операционных систем Androind и iOS</p>
+          <p class="mobile-about">Воспользуйтесь нашим мобильным приложением. Оно позволит слушать музыку с любого устройства на базе операционных систем Androind и iOS</p>
           <p>С тарифом «Премиум» приложение позволяет скачивать все композиции из нашей коллекции. Вы можете слушать музыку даже без интернета.</p>
           <button class="btn mobile-app-button">Скачать</button>
         </div>
