--- a/src/artist.html
+++ b/src/artist.html
@@ -276,11 +276,11 @@
               </div>
               <hr class="line">
               <div class="footer-down-part">
-                  <span>Магазин</span>
-                  <span>Обслуживание</span>
-                  <span>Блог</span>
-                  <span>Поддержка</span>
-                  <span>Контакты</span>
+                  <a href ="#">Магазин</a>
+                  <a href ="#">Обслуживание</a>
+                  <a href ="#">Блог</a>
+                  <a href ="#">Поддержка</a>
+                  <a href ="#">Контакты</a>
               </div>
           </div>
       </footer>
