--- a/src/index.html
+++ b/src/index.html
@@ -175,20 +175,20 @@
                   <div>
                       <h2 class="footer-topic">Подписывайтесь</h2>
                       <div class="media">
-                          <img src="images/Google+.png" alt="знак Гугл+">
-                          <img src="images/Twitter.png" alt="знак Твиттер">
-                          <img src="images/Facebook.png" alt="знак Фейсбук">
-                          <img src="images/Instagram.png" alt="знак Инстаграма">
+                        <a href ="#"><img src="images/Google+.png" alt="знак Гугл+"></a>
+                        <a href ="#"><img src="images/Twitter.png" alt="знак Твиттер"></a>
+                        <a href ="#"><img src="images/Facebook.png" alt="знак Фейсбук"></a>
+                        <a href ="#"><img src="images/Instagram.png" alt="знак Инстаграма"></a>
                       </div>
                   </div>
               </div>
               <hr class="line">
               <div class="footer-down-part">
-                  <a href ="#">Магазин</a>
-                  <a href ="#">Обслуживание</a>
-                  <a href ="#">Блог</a>
-                  <a href ="#">Поддержка</a>
-                  <sa href ="#">Контакты</a>
+                  <a href ="#" class="footer-down-part-item">Магазин</a>
+                  <a href ="#" class="footer-down-part-item">Обслуживание</a>
+                  <a href ="#" class="footer-down-part-item">Блог</a>
+                  <a href ="#" class="footer-down-part-item">Поддержка</a>
+                  <a href ="#" class="footer-down-part-item">Контакты</a>
               </div>
           </div>
       </footer>
