--- a/src/index.html
+++ b/src/index.html
@@ -168,9 +168,9 @@
                   </div>
                   <div>
                       <h2 class="footer-topic">Контакты</h2>
-                      <a href="#">hello@music.box</a>
+                      <a href="#" class="footer-item">hello@music.box</a>
                       <p class="footer-adress">Russia, Moscow. Music Box studio</p>
-                      <a href="#">+ 7 499 999 99 99</a>
+                      <a href="#" class="footer-item">+ 7 499 999 99 99</a>
                   </div>
                   <div>
                       <h2 class="footer-topic">Подписывайтесь</h2>
